      - font-package-not-multi-arch-foreign
      - illegal-runtime-test-name
      - inconsistent-testsuite-field
      - license-problem-gfdl-invariants
      - license-problem-gfdl-invariants-empty
      - menu-icon-uses-relative-path
      - missing-runtime-test-file
      - missing-runtime-tests-field
      - package-contains-broken-symlink-wildcard
      - runtime-test-file-is-not-a-regular-file
      - unknown-runtime-tests-feature
      - unknown-runtime-tests-field
      - unknown-runtime-tests-restriction
      - unknown-testsuite
      - vcs-field-bitrotted
      - vcs-git-uses-invalid-user-uri
      - zip-parse-error
    + Removed:
      - unneeded-build-dep-on-quilt

  * checks/*:
    + [NT] Avoid following unsafe symlinks.
  * checks/binaries{,.desc}:
    + [NT] Accept libx32 as a bi-arch directory.
    + [NT] Correct reference policy reference.  Thanks to
      Samuel Bronson for the correction.  (Closes: #698234)
    + [NT] Detect debug ELF binaries with no debug symbols.
      Thanks to Nelson A. de Oliveira for the report.
      (Closes: #668437)
    + [NT] Check for binaries built without LFS.  This can
      only be checked for 32bit binaries as 64bit binaries
      have LFS by definition.  Thanks to Guillem Jover for
      the report and patches.  (Closes: #670963)
    + [NT] Apply patch from Samuel Bronson to bump severity
      (but decrease certainty) of the "not linked against
      libc" tags.  (Closes: #698720)
  * checks/changes:
    + [NT] Recognise "<dist>-backports-sloppy" as a valid
      distribution.  Thanks to Romain Francoise for the
      report and the patch.  (Closes: #705170)
  * checks/copyright:
    + [NT] Apply patch from Evgeni Golov to avoid false
      positive tag when the MPL-2.0 license appears in the
      copyright file.  (See #626454)
  * checks/cruft{,.desc}:
    + [NT] Do not emit the license-problem-json-evil tag for
      non-free packages.
    + [NT] Apply patch from Bastien Roucariès to catch GFDL