@@ -36,7 +36,7 @@ use constant BLOCKSIZE => 4096;
 use Lintian::Data;
 use Lintian::Relation ();
 use Lintian::Tags qw(tag);
-use Lintian::Util qw(fail is_ancestor_of);
+use Lintian::Util qw(fail is_ancestor_of resolve_pkg_path);
 
 use Cwd;
 use File::Find;
@@ -356,11 +356,32 @@ sub find_cruft {
             }
         }
     }
-    -f or return; # we just need normal files for the rest
-    if (-l && !is_ancestor_of($info->unpacked, $_)) {
-        # skip unsafe symlinks too
-        return;
+    if (-l) {
+        my $target = readlink($_);
+        my $dirname = dirname($_);
+        my $resolved = resolve_pkg_path($dirname, $target);
+        if (not $resolved) {
+            # skip unsafe symlinks too
+            tag 'source-contains-unsafe-symlink', $_;
+            return;
+        }
+        # This check may appear redundant, but it is not!
+        # resolve_pkg_path tells us that the link can "safely be
+        # resolved without escaping the root".  But it tells us
+        # nothing about the target of the link (which could be an
+        # unsafe symlink). Example
+        #
+        #  safe-symlink -> unsafe-symlink
+        #  unsafe-symlink -> ../../../../etc/passwd
+        #
+        # resolve_pkg_path would approve of "safe-symlink", but if we
+        # were to open it we would actually end up escaping the
+        # package root.
+        if (-e and not is_ancestor_of($info->unpacked, $_)) {
+            return;
+        }
     }
+    -f or return; # we just need normal files for the rest
     $basename = basename $name;
 
     unless ($warned->{$name}) {
