@@ -20,3 +20,10 @@ Info: The package contains a symlink with a target that
  appears to be a "failed" wildcard expansion.  Furthermore
  the target does not exists in the package or any of its
  direct dependencies (built from the same source).
+
+Tag: package-contains-unsafe-symlink
+Severity: serious
+Certainty: certain
+Info: The package contains an unsafe symlink.  If followed,
+ the link will escape the package root.
+Ref: policy 10.5
