@@ -1,0 +1,5 @@
+Testname: cruft-unsafe-symlinks
+Sequence: 6000
+Version: 1.0
+Description: General tests of unsafe symlinks
+Test-For: source-contains-unsafe-symlink
